@@ -1,26 +1,27 @@
 Source: libbpp-raa
 Section: libs
 Priority: optional
-Maintainer: Julien Dutheil <julien.dutheil@univ-montp2.fr>
+Maintainer: Loic Dachary <loic@dachary.org>
+Uploaders: Julien Dutheil <julien.dutheil@univ-montp2.fr>
 Build-Depends: debhelper (>= 5), cmake (>= 2.6),
-  zlib1g-dev (>= 1.2.3), libbpp-core-dev (>= 2.0.0), libbpp-seq-dev (>= 2.0.0), zlib1g (>= 1.2.3)
+  zlib1g-dev (>= 1.2.3), libbpp-seq-dev (>= 2.0.1), zlib1g (>= 1.2.3)
 Standards-Version: 3.9.1
 
 Package: libbpp-raa-dev
 Section: libdevel
 Architecture: any
-Depends: libbpp-raa (= ${binary:Version}), ${misc:Depends},
-  zlib1g-dev (>= 1.2.3), libbpp-core-dev (>= 2.0.0), libbpp-seq-dev (>= 2.0.0)
+Depends: libbpp-raa1 (= ${binary:Version}), ${misc:Depends},
+  zlib1g-dev (>= 1.2.3), libbpp-seq-dev (>= 2.0.1)
 Description: The Bio++ Remote Acnuc Access library development files.
  This library contains utilitary and classes to query public databases
  (GenBank, EMBL, SwissProt, etc) using acnuc.
  It is part of the Bio++ project.
 
-Package: libbpp-raa
+Package: libbpp-raa1
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
-  zlib1g (>= 1.2.3), libbpp-core (>= 2.0.0), libbpp-seq (>= 2.0.0)
+  zlib1g (>= 1.2.3), libbpp-seq9 (>= 2.0.1)
 Description: The Bio++ Remote Acnuc Access library.
  This library contains utilitary and classes to query public databases
  (GenBank, EMBL, SwissProt, etc) using acnuc.
